# groth21-rs

./: CLAUDE.md  Cargo.toml  README.md
benches/: groth21.rs  run-pvss-benches.sh  worst_case_decrypt.rs
src/: lib.rs
src/groth21/: chunking.rs  dealing.rs  dlog_recovery.rs  encryption.rs  fiat_shamir.rs  fs_util.rs  malicious.rs  mod.rs  nizk_chunking.rs  nizk_sharing.rs  utils.rs
src/math/: evaluation_domain.rs  fft.rs  lagrange.rs  mod.rs  polynomials.rs  scalar.rs
src/pvss/: config.rs  mod.rs  secret.rs
tests/: dealing.rs  transcript_sizes.rs
