[package]
name = "e2e-vss"
version = "0.2.0"
edition = "2021"

[dependencies]
blstrs = { version = "0.7.1", features = ["serde"] }
ff = "0.13"
group = "0.13"
rand = "0.8"
rand_core = "0.6"
rand_chacha = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_with = "2.2"
bincode = "1.3"
merlin = "3.0"
sha3 = "0.10"
lazy_static = "1.4"
zeroize = { version = "1.3", features = ["zeroize_derive"] }
num-bigint = { version = "0.4", features = ["rand"] }
num-integer = "0.1"
more-asserts = "0.3"

[dev-dependencies]
criterion = "0.5"
hex = "0.4"

[[bench]]
name = "groth21"
harness = false

[[bench]]
name = "worst_case_decrypt"
harness = false

[profile.release]
lto = true
