[package]
name = "e2e-vss"
version = "0.2.0"
edition = "2021"

[dependencies]
blstrs = { version = "0.7.1", features = ["serde"] }
# Force blst to its single-threaded build so MSMs don't secretly go multi-core.
# Features are additive, so adding `no-threads` here turns off blst's built-in
# Pippenger thread pool even though blstrs pulls blst with defaults.
blst = { version = "0.3", features = ["no-threads"] }
ff = "0.13"
group = "0.13"
rand = "0.8"
rand_core = "0.6"
rand_chacha = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_with = "2.2"
bincode = "1.3"
merlin = "3.0"
sha3 = "0.10"
lazy_static = "1.4"
zeroize = { version = "1.3", features = ["zeroize_derive"] }
num-bigint = { version = "0.4", features = ["rand"] }
num-integer = "0.1"
more-asserts = "0.3"

[features]
default = []
# Use 8-bit chunks (ℓ=8, B=2^8, m=32) instead of the default 16-bit chunks (ℓ=16, B=2^16, m=16).
chunks-8bit = []
# Use 32-bit chunks (ℓ=32, B=2^32, m=8). Decryption via BSGS is impractical at this
# size; this feature exists only for Deal/Verify/transcript-size measurements.
chunks-32bit = []

[dev-dependencies]
criterion = "0.5"
hex = "0.4"

[[bench]]
name = "groth21"
harness = false

[[bench]]
name = "worst_case_decrypt"
harness = false

[profile.release]
lto = true
